# lwzip

./: CLAUDE.md  CMakeLists.txt
.github/workflows/: build-windows.yml  release.yml
CPP/7zip/: LWZipCodePage.cpp  LWZipCodePage.h
CPP/7zip/Archive/Zip/: ZipHandler.cpp
CPP/7zip/Bundles/Fm/: makefile
CPP/7zip/Bundles/Format7zF/: makefile
CPP/7zip/UI/FileManager/: App.cpp  EncodingSwitch.cpp  FM.cpp  resource.h  resource.rc
GUI/: CMakeLists.txt
GUI/Common/: ArchiveBridge.cpp  ArchiveBridge.h  CMakeLists.txt  EncodingManager.cpp  EncodingManager.h  EncodingSelector.cpp  EncodingSelector.h  LanguageSelector.cpp  LanguageSelector.h  PasswordDialog.cpp  PasswordDialog.h
GUI/FileManager/: CMakeLists.txt  FileManagerWindow.cpp  FileManagerWindow.h  main.cpp
GUI/Resources/: resources.qrc
GUI/Simple/: CMakeLists.txt  SimpleWindow.cpp  SimpleWindow.h  main.cpp
GUI/i18n/: lwzip_ja.ts  lwzip_zh_CN.ts  lwzip_zh_TW.ts
