# 7zip Core Library
set(SEVENZIP_C_DIR ${CMAKE_SOURCE_DIR}/C)
set(SEVENZIP_CPP_DIR ${CMAKE_SOURCE_DIR}/CPP)

# Core C sources (LZMA SDK)
set(SEVENZIP_C_SOURCES
    ${SEVENZIP_C_DIR}/7zAlloc.c
    ${SEVENZIP_C_DIR}/7zArcIn.c
    ${SEVENZIP_C_DIR}/7zBuf.c
    ${SEVENZIP_C_DIR}/7zBuf2.c
    ${SEVENZIP_C_DIR}/7zCrc.c
    ${SEVENZIP_C_DIR}/7zCrcOpt.c
    ${SEVENZIP_C_DIR}/7zDec.c
    ${SEVENZIP_C_DIR}/7zFile.c
    ${SEVENZIP_C_DIR}/7zStream.c
    ${SEVENZIP_C_DIR}/Aes.c
    ${SEVENZIP_C_DIR}/AesOpt.c
    ${SEVENZIP_C_DIR}/Alloc.c
    ${SEVENZIP_C_DIR}/Bcj2.c
    ${SEVENZIP_C_DIR}/Bcj2Enc.c
    ${SEVENZIP_C_DIR}/Blake2s.c
    ${SEVENZIP_C_DIR}/Bra.c
    ${SEVENZIP_C_DIR}/Bra86.c
    ${SEVENZIP_C_DIR}/BraIA64.c
    ${SEVENZIP_C_DIR}/BwtSort.c
    ${SEVENZIP_C_DIR}/CpuArch.c
    ${SEVENZIP_C_DIR}/Delta.c
    ${SEVENZIP_C_DIR}/HuffEnc.c
    ${SEVENZIP_C_DIR}/LzFind.c
    ${SEVENZIP_C_DIR}/LzFindMt.c
    ${SEVENZIP_C_DIR}/LzFindOpt.c
    ${SEVENZIP_C_DIR}/Lzma2Dec.c
    ${SEVENZIP_C_DIR}/Lzma2DecMt.c
    ${SEVENZIP_C_DIR}/Lzma2Enc.c
    ${SEVENZIP_C_DIR}/LzmaDec.c
    ${SEVENZIP_C_DIR}/LzmaEnc.c
    ${SEVENZIP_C_DIR}/LzmaLib.c
    ${SEVENZIP_C_DIR}/MtCoder.c
    ${SEVENZIP_C_DIR}/MtDec.c
    ${SEVENZIP_C_DIR}/Ppmd7.c
    ${SEVENZIP_C_DIR}/Ppmd7Dec.c
    ${SEVENZIP_C_DIR}/Ppmd7Enc.c
    ${SEVENZIP_C_DIR}/Ppmd8.c
    ${SEVENZIP_C_DIR}/Ppmd8Dec.c
    ${SEVENZIP_C_DIR}/Ppmd8Enc.c
    ${SEVENZIP_C_DIR}/Sha1.c
    ${SEVENZIP_C_DIR}/Sha256.c
    ${SEVENZIP_C_DIR}/Sort.c
    ${SEVENZIP_C_DIR}/Threads.c
    ${SEVENZIP_C_DIR}/Xz.c
    ${SEVENZIP_C_DIR}/XzCrc64.c
    ${SEVENZIP_C_DIR}/XzCrc64Opt.c
    ${SEVENZIP_C_DIR}/XzDec.c
    ${SEVENZIP_C_DIR}/XzEnc.c
    ${SEVENZIP_C_DIR}/XzIn.c
    ${SEVENZIP_C_DIR}/Xxh64.c
    ${SEVENZIP_C_DIR}/ZstdDec.c
)

# Core C++ sources
file(GLOB SEVENZIP_COMMON_SOURCES ${SEVENZIP_CPP_DIR}/Common/*.cpp)
file(GLOB SEVENZIP_7ZIP_COMMON_SOURCES ${SEVENZIP_CPP_DIR}/7zip/Common/*.cpp)
file(GLOB SEVENZIP_ARCHIVE_SOURCES ${SEVENZIP_CPP_DIR}/7zip/Archive/*.cpp)
file(GLOB SEVENZIP_ARCHIVE_7Z_SOURCES ${SEVENZIP_CPP_DIR}/7zip/Archive/7z/*.cpp)
file(GLOB SEVENZIP_ARCHIVE_ZIP_SOURCES ${SEVENZIP_CPP_DIR}/7zip/Archive/Zip/*.cpp)
file(GLOB SEVENZIP_ARCHIVE_TAR_SOURCES ${SEVENZIP_CPP_DIR}/7zip/Archive/Tar/*.cpp)
file(GLOB SEVENZIP_ARCHIVE_GZ_SOURCES ${SEVENZIP_CPP_DIR}/7zip/Archive/Gz/*.cpp)
file(GLOB SEVENZIP_ARCHIVE_BZ2_SOURCES ${SEVENZIP_CPP_DIR}/7zip/Archive/Bz2/*.cpp)
file(GLOB SEVENZIP_ARCHIVE_CAB_SOURCES ${SEVENZIP_CPP_DIR}/7zip/Archive/Cab/*.cpp)
file(GLOB SEVENZIP_ARCHIVE_ISO_SOURCES ${SEVENZIP_CPP_DIR}/7zip/Archive/Iso/*.cpp)
file(GLOB SEVENZIP_ARCHIVE_NSIS_SOURCES ${SEVENZIP_CPP_DIR}/7zip/Archive/Nsis/*.cpp)
file(GLOB SEVENZIP_ARCHIVE_RAR_SOURCES ${SEVENZIP_CPP_DIR}/7zip/Archive/Rar/*.cpp)
file(GLOB SEVENZIP_ARCHIVE_WIM_SOURCES ${SEVENZIP_CPP_DIR}/7zip/Archive/Wim/*.cpp)
file(GLOB SEVENZIP_ARCHIVE_XZ_SOURCES ${SEVENZIP_CPP_DIR}/7zip/Archive/Xz/*.cpp)
file(GLOB SEVENZIP_COMPRESS_SOURCES ${SEVENZIP_CPP_DIR}/7zip/Compress/*.cpp)
file(GLOB SEVENZIP_CRYPTO_SOURCES ${SEVENZIP_CPP_DIR}/7zip/Crypto/*.cpp)
file(GLOB SEVENZIP_UI_COMMON_SOURCES ${SEVENZIP_CPP_DIR}/7zip/UI/Common/*.cpp)

add_library(7zip_core STATIC
    ${SEVENZIP_C_SOURCES}
    ${SEVENZIP_COMMON_SOURCES}
    ${SEVENZIP_7ZIP_COMMON_SOURCES}
    ${SEVENZIP_ARCHIVE_SOURCES}
    ${SEVENZIP_ARCHIVE_7Z_SOURCES}
    ${SEVENZIP_ARCHIVE_ZIP_SOURCES}
    ${SEVENZIP_ARCHIVE_TAR_SOURCES}
    ${SEVENZIP_ARCHIVE_GZ_SOURCES}
    ${SEVENZIP_ARCHIVE_BZ2_SOURCES}
    ${SEVENZIP_ARCHIVE_CAB_SOURCES}
    ${SEVENZIP_ARCHIVE_ISO_SOURCES}
    ${SEVENZIP_ARCHIVE_NSIS_SOURCES}
    ${SEVENZIP_ARCHIVE_RAR_SOURCES}
    ${SEVENZIP_ARCHIVE_WIM_SOURCES}
    ${SEVENZIP_ARCHIVE_XZ_SOURCES}
    ${SEVENZIP_COMPRESS_SOURCES}
    ${SEVENZIP_CRYPTO_SOURCES}
    ${SEVENZIP_UI_COMMON_SOURCES}
)

target_include_directories(7zip_core PUBLIC
    ${CMAKE_SOURCE_DIR}
    ${SEVENZIP_C_DIR}
    ${SEVENZIP_CPP_DIR}
    ${SEVENZIP_CPP_DIR}/Common
    ${SEVENZIP_CPP_DIR}/7zip
    ${SEVENZIP_CPP_DIR}/7zip/Common
    ${SEVENZIP_CPP_DIR}/7zip/Archive
    ${SEVENZIP_CPP_DIR}/7zip/UI/Common
)

if(NOT WIN32)
    target_compile_definitions(7zip_core PRIVATE
        _FILE_OFFSET_BITS=64
        _LARGEFILE_SOURCE
        _REENTRANT
        ENV_UNIX
        BREAK_HANDLER
        UNICODE
        _UNICODE
    )
endif()

# GUI Common module
add_subdirectory(Common)
add_subdirectory(Simple)
add_subdirectory(FileManager)
